Fix label color in dark mode

--- a/django_project/staticfiles/css/main.css
+++ b/django_project/staticfiles/css/main.css
@@ -783,7 +783,8 @@ a.hidden-link {
     li,
     legend,
     small,
-    .word-count
+    .word-count,
+    label,
   ) {
   color: var(--secondary-color);
 }
